--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "kompani-lauritzen-app",
+  "name": "kompaniets-opptaksprove",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:ios": "eas build --platform ios"
   },
   "dependencies": {
-    "expo": "~53.0.12",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.4",
-    "expo-linear-gradient": "~14.1.5"
+    "expo": "~51.0.18",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-router": "~3.5.17",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "expo-linking": "~6.3.1",
+    "expo-constants": "~16.0.2",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
