--- a/app.json
+++ b/app.json
@@ -1,29 +1,45 @@
 {
   "expo": {
-    "name": "kompani-lauritzen-app",
-    "slug": "kompani-lauritzen-app",
+    "name": "Kompaniets Opptaksprøve",
+    "slug": "kompaniets-opptaksprove",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#2c3e50"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.elissi.kompanietsopptaksprove",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      },
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#2c3e50"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true
+        "backgroundColor": "#2c3e50"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "70d358c2-331f-490c-92d1-32021431743b"
+      }
+    },
+    "owner": "elissi"
   }
 }
