--- a/app.json
+++ b/app.json
@@ -12,14 +12,11 @@
       "backgroundColor": "#2c3e50"
     },
     "ios": {
-      "supportsTablet": true,
+      "supportsTablet": false,
       "bundleIdentifier": "com.elissi.kompanietsopptaksprove",
+      "icon": "./assets/icon.png",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
-      },
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#2c3e50"
       }
     },
     "android": {
